# FastAPI-test

./: README.md  pyproject.toml
fastapi_test/: main.py
fastapi_test/routers/: task.py
fastapi_test/schemas/: task.py
